# jailbreak-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: stage1_prompt.txt
src/rljb/: __init__.py  env.py  policy.py  refusal.py  rollout.py  tokenization.py  train_stage1.py
